refactor: make get(0) to getFirst() in task repo test